<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:elevation="3dp"
        android:minWidth="400dp"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView_WifiName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dash"
                android:textColor="@color/primary_text"
                android:textSize="22dp" />

            <ImageButton
                android:id="@+id/button_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:src="@drawable/ic_sync_black_24px" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/status_label"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_WifiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dash"
            android:textColor="@color/primary_text" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/signal_label"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_WifiSignal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dash"
            android:textColor="@color/primary_text" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/speed_label"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_WifiSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dash"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/frequency_label"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_WifiFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dash"
            android:textColor="@color/primary_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/label_Save"></Button>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="3dp"
                android:text="@string/label_Edit"></Button>

            <Button
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:elevation="3dp"
                android:text="@string/label_Share"></Button>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>